tests/compError/missingField.ucl
// testSkip
// compError
// error: struct instance is missing field 'b'
// tests/compError/missingField.ucl:8 -> struct instance here
// tests/compError/missingField.ucl:6 -> field originally defined here

test = struct(a: Number, b: Number) {}

test {
	a = 1
}